--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -315,18 +315,17 @@
                 </div>
 
                 <!-- Campaigns Page -->
+                <div id="campaign-wizard-modal" class="modal-overlay hidden"></div>
                 <div id="campaigns-page" class="page">
                     <div class="page-header">
-                        <div class="page-title">
-                            <h1>Campaigns</h1>
-                        </div>
+                        <h1>Email Campaigns</h1>
                         <button id="create-campaign-btn" class="btn btn-primary">
                             <i class="fas fa-plus"></i> New Campaign
-                    </button>
+        </button>
                     </div>
+
                     <div id="campaigns-list"></div>
                 </div>
-
                 <!-- Analytics Page -->
                 <div id="analytics-page" class="page">
                     <div class="page-header">
